captured yt-dlp logging